@@ -11,5 +11,8 @@
 // about supported directives.
 //
 //= require rails-ujs
+//= require jquery
 //= require turbolinks
-//= require_tree .
+//= require materialize-sprockets
+//= require materialize/extras/nouislider
+
