@@ -12,12 +12,6 @@
 
 ActiveRecord::Schema.define(version: 20170603160228) do
 
-  create_table "bets", force: :cascade do |t|
-    t.string "title"
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
-  end
-
   create_table "creators", force: :cascade do |t|
     t.string "email", default: "", null: false
     t.string "encrypted_password", default: "", null: false
@@ -33,12 +27,6 @@ ActiveRecord::Schema.define(version: 20170603160228) do
     t.datetime "updated_at", null: false
     t.index ["email"], name: "index_creators_on_email", unique: true
     t.index ["reset_password_token"], name: "index_creators_on_reset_password_token", unique: true
-  end
-
-  create_table "games", force: :cascade do |t|
-    t.string "title"
-    t.datetime "created_at", null: false
-    t.datetime "updated_at", null: false
   end
 
 end
